// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubscriptionDropdown Snapshot Testing matches snapshot with all subscription options 1`] = `
<div
  class="ms-Stack flex-row css-109"
>
  <div
    class="ms-StackItem flex-fixed-width css-110"
  >
    <label
      class="field-label "
    >
      Subscription
      : 
    </label>
  </div>
  <div
    class="ms-StackItem flex-grow-col css-110"
  >
    <div
      class="ms-Dropdown-container"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="Subscription"
        aria-required="true"
        class="ms-Dropdown is-required dropdown-111"
        data-is-focusable="true"
        data-ktp-target="true"
        id="Dropdown0"
        role="combobox"
        tabindex="0"
      >
        <span
          aria-invalid="false"
          class="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder title-112"
          id="Dropdown0-option"
        >
          Select a subscription
        </span>
        <span
          class="ms-Dropdown-caretDownWrapper caretDownWrapper-113"
        >
          <i
            aria-hidden="true"
            class="ms-Dropdown-caretDown caretDown-131"
            data-icon-name="ChevronDown"
          >
            
          </i>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`SubscriptionDropdown Snapshot Testing matches snapshot with empty options 1`] = `
<div
  class="ms-Stack flex-row css-109"
>
  <div
    class="ms-StackItem flex-fixed-width css-110"
  >
    <label
      class="field-label "
    >
      Subscription
      : 
    </label>
  </div>
  <div
    class="ms-StackItem flex-grow-col css-110"
  >
    <div
      class="ms-Dropdown-container"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="Subscription"
        aria-required="true"
        class="ms-Dropdown is-required dropdown-111"
        data-is-focusable="true"
        data-ktp-target="true"
        id="Dropdown2"
        role="combobox"
        tabindex="0"
      >
        <span
          aria-invalid="false"
          class="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder title-112"
          id="Dropdown2-option"
        >
          Select a subscription
        </span>
        <span
          class="ms-Dropdown-caretDownWrapper caretDownWrapper-113"
        >
          <i
            aria-hidden="true"
            class="ms-Dropdown-caretDown caretDown-131"
            data-icon-name="ChevronDown"
          >
            
          </i>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`SubscriptionDropdown Snapshot Testing matches snapshot with long subscription name 1`] = `
<div
  class="ms-Stack flex-row css-109"
>
  <div
    class="ms-StackItem flex-fixed-width css-110"
  >
    <label
      class="field-label "
    >
      Subscription
      : 
    </label>
  </div>
  <div
    class="ms-StackItem flex-grow-col css-110"
  >
    <div
      class="ms-Dropdown-container"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="Subscription"
        aria-required="true"
        class="ms-Dropdown is-required dropdown-111"
        data-is-focusable="true"
        data-ktp-target="true"
        id="Dropdown5"
        role="combobox"
        tabindex="0"
      >
        <span
          aria-invalid="false"
          class="ms-Dropdown-title title-132"
          id="Dropdown5-option"
        >
          This is an extremely long subscription name that tests how the component handles text overflow and layout constraints
        </span>
        <span
          class="ms-Dropdown-caretDownWrapper caretDownWrapper-113"
        >
          <i
            aria-hidden="true"
            class="ms-Dropdown-caretDown caretDown-131"
            data-icon-name="ChevronDown"
          >
            
          </i>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`SubscriptionDropdown Snapshot Testing matches snapshot with selected subscription 1`] = `
<div
  class="ms-Stack flex-row css-109"
>
  <div
    class="ms-StackItem flex-fixed-width css-110"
  >
    <label
      class="field-label "
    >
      Subscription
      : 
    </label>
  </div>
  <div
    class="ms-StackItem flex-grow-col css-110"
  >
    <div
      class="ms-Dropdown-container"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="Subscription"
        aria-required="true"
        class="ms-Dropdown is-required dropdown-111"
        data-is-focusable="true"
        data-ktp-target="true"
        id="Dropdown1"
        role="combobox"
        tabindex="0"
      >
        <span
          aria-invalid="false"
          class="ms-Dropdown-title title-132"
          id="Dropdown1-option"
        >
          Production Subscription
        </span>
        <span
          class="ms-Dropdown-caretDownWrapper caretDownWrapper-113"
        >
          <i
            aria-hidden="true"
            class="ms-Dropdown-caretDown caretDown-131"
            data-icon-name="ChevronDown"
          >
            
          </i>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`SubscriptionDropdown Snapshot Testing matches snapshot with single option 1`] = `
<div
  class="ms-Stack flex-row css-109"
>
  <div
    class="ms-StackItem flex-fixed-width css-110"
  >
    <label
      class="field-label "
    >
      Subscription
      : 
    </label>
  </div>
  <div
    class="ms-StackItem flex-grow-col css-110"
  >
    <div
      class="ms-Dropdown-container"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="Subscription"
        aria-required="true"
        class="ms-Dropdown is-required dropdown-111"
        data-is-focusable="true"
        data-ktp-target="true"
        id="Dropdown3"
        role="combobox"
        tabindex="0"
      >
        <span
          aria-invalid="false"
          class="ms-Dropdown-title title-132"
          id="Dropdown3-option"
        >
          Development Subscription
        </span>
        <span
          class="ms-Dropdown-caretDownWrapper caretDownWrapper-113"
        >
          <i
            aria-hidden="true"
            class="ms-Dropdown-caretDown caretDown-131"
            data-icon-name="ChevronDown"
          >
            
          </i>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`SubscriptionDropdown Snapshot Testing matches snapshot with special characters in options 1`] = `
<div
  class="ms-Stack flex-row css-109"
>
  <div
    class="ms-StackItem flex-fixed-width css-110"
  >
    <label
      class="field-label "
    >
      Subscription
      : 
    </label>
  </div>
  <div
    class="ms-StackItem flex-grow-col css-110"
  >
    <div
      class="ms-Dropdown-container"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="Subscription"
        aria-required="true"
        class="ms-Dropdown is-required dropdown-111"
        data-is-focusable="true"
        data-ktp-target="true"
        id="Dropdown4"
        role="combobox"
        tabindex="0"
      >
        <span
          aria-invalid="false"
          class="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder title-112"
          id="Dropdown4-option"
        >
          Select a subscription
        </span>
        <span
          class="ms-Dropdown-caretDownWrapper caretDownWrapper-113"
        >
          <i
            aria-hidden="true"
            class="ms-Dropdown-caretDown caretDown-131"
            data-icon-name="ChevronDown"
          >
            
          </i>
        </span>
      </div>
    </div>
  </div>
</div>
`;
